# ActiveMatterWorms

./: .gitignore  ActiveMatterWorms.code-workspace  Makefile  README.md  amatter.chpl  amatter.x  cardioid.R  commands.txt  merge_xyz.py  ovito_render.py  parpin.sh  runner.sh  runsim.sh  saved.sh  sbatch_sim.sh  setcuda.bash
analysis/: defects.ipynb  defects2.ipynb  find_defects.py  make_director_field.py  viz.ipynb  vizlib.py
archive/: amatter.chpl.bak  amatter_26_11_2023.chpl
backup/: aomd  aomd.chpl
chapel/: Makefile  a.out  amatter  amatter.chpl  amatter2  amatter2.chpl  amatter_par  amatter_par.chpl  amatter_types.chpl  cardiod_amatter  cardiod_amatter.chpl  index2d  index2d.chpl  merge_xyz.py  sbatch_sim.sh  thermo.f90
data/: data.md
data_01_02_2024/: amatter.restart
data_01_02_2024-2/: amatter.restart
data_02_02_2024/: amatter.restart
data_14_02_2024/: amatter.restart
data_15_02_2024/: amatter.restart
data_15_03_2024/: amatter.restart
data_16_02_2024/: amatter.restart
data_17_02_2024/: amatter.restart
data_17_03_2024/: amatter.restart
docs/: .buildinfo  (+7 more)
fortran/: CMakeLists.txt  amatter  cmake_install.cmake  fluid_mod.mod
fortran/chapel/: amatter  amatter.chpl
fortran/src/: active_mod.mod  active_module.f90  amatter.f90  bubble.f90  default_args.in  fluid_mod.mod
fortran/src/backups/: amatter_formatted.f90.bak  lbm.f90.bak
fortran/src/backups/s202/: s202.f
fortran/src/individual_programs/: a.out  amatter.f90  colbm.f90  colbm.x  control_file.f90  control_file.txt  lbm_circle1.f90
fortran/src/python/: jlbm.py  tlbm.py
(+1349 files in other folders)
